--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Programming test for spriteCloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test",
+    "report": "allure generate ./allure-results --clean -o ./allure-report && allure open ./allure-report"
   },
   "repository": {
     "type": "git",
