--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "homepage": "https://github.com/afleming-7/spriteCloud#readme",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
+    "@types/node": "^20.11.0",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.3.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.9.2",
     "ts-node": "^10.9.2",
-    "@types/node": "^20.11.0"
+    "typescript": "^5.9.2"
   }
 }
